--- a/test/index.html
+++ b/test/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
@@ -42,7 +43,6 @@
         }
     </style>
 </head>
-</html>
 <body>
     <div class="cnt">
         <button onclick="move();" id="move">Move</button>
@@ -91,3 +91,4 @@
     <pre class="results">
     </pre>
 </body>
+</html>
